test/src/e2e_vm_tests/test_programs/should_fail/language/intrinsics/intrinsics_args_type_checking/src/mem_repr_id_intrinsics.sw
library;

pub fn check_args() {
    let _ = __mem_repr_id_runtime();
    let _ = __mem_repr_id_runtime::<u64, u32>();
    let _ = __mem_repr_id_runtime::<u64>(42u64);

    let _ = __mem_repr_id_encoding();
    let _ = __mem_repr_id_encoding::<u64, u32>();
    let _ = __mem_repr_id_encoding::<u64>(42u64);

    let _ = __mem_repr_id_hashing();
    let _ = __mem_repr_id_hashing::<u64, u32>();
    let _ = __mem_repr_id_hashing::<u64>(42u64);
}
